<resources>
    <string name="app_name">Inventory App Puzzles</string>

    <string name="editor_activity_puzzle_book">Puzzle Book</string>
    <string name="editor_activity_puzzle_book_name">Puzzle Book Name</string>
    <string name="editor_activity_author_name">Author Name</string>
    <string name="editor_activity_quantity">Quantity</string>
    <string name="editor_activity_price">Price/item</string>
    <string name="editor_activity_address">Address</string>
    <string name="editor_activity_price_item">Enter price</string>
    <string name="editor_activity_place_delivered">Place to be delivered</string>
    <string name="editor_activity_image">Add Image</string>
    <string name="editor_activity_submit_order">Submit Order</string>

    <string name="main_activity_order_list_empty">The order list is empty</string>
    <string name="main_activity_adding_puzzle_books">Start adding your puzzle books order here</string>

    <string name="list_item_sell_puzzle">Sell Puzzle Book</string>

    <string name="main_editor_save">SAVE</string>
    <string name="main_editor_delete">DELETE</string>
    <string name="main_main_delete_puzzles">Delete all Puzzles</string>

    <string name="add_puzzle_book_editor">Add a Puzzle Book</string>
    <string name="edit_puzzle_book_editor">Edit a Puzzle Book</string>
    <string name="error_saving_puzzle_edit">Error saving puzzle book data</string>
    <string name="edit_saved_puzzle">Puzzle Book saved</string>
    <string name="error_updating_puzzle_edit">Error in updating puzzle book data</string>
    <string name="puzzle_updated_edit">Puzzle Book data updated</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this puzzle data?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_puzzle_book_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_puzzle_book_failed">Error with deleting pet</string>

    <string name="err_external_storage_permissions">Need permissions to get a product photo</string>

    <string name="err_missing_textfields">You need to complete all fields</string>


</resources>
