<?xml version="1.0" encoding="utf-8"?>
<!--* This project is done by Khaidem Sandip Singha under the Udacity Android Foundations Nanodegree program.
    *
    * I confirm that this submission is my own work. I have not used code from any other Udacity student's or graduate's submission of the same project.
    * I understand that Udacity will check my submission for plagiarism, and that failure to adhere to the Udacity Honor Code may result in the cancellation of my
    * enrollment.
    *-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/editor_activity_puzzle_book"/>

            <LinearLayout
                android:layout_width="@dimen/padding_zero"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="@dimen/padding_six"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_puzzle_name"
                    android:hint="@string/editor_activity_puzzle_book_name"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle" />

                <EditText
                    android:id = "@+id/edit_author_name"
                    android:hint = "@string/editor_activity_author_name"
                    style="@style/EditorFieldStyle" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/editor_activity_quantity"/>

            <Button
                android:id="@+id/add_button"
                android:layout_width="@dimen/padding_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="@dimen/padding_zero"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sub_button"
                android:layout_width="@dimen/padding_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/editor_activity_price"
                style="@style/CategoryStyle" />
            <LinearLayout
                android:layout_width="@dimen/padding_zero"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_six">

                <EditText
                    android:id="@+id/edit_price"
                    android:hint="@string/editor_activity_price_item"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/editor_activity_address"
                style="@style/CategoryStyle" />

            <LinearLayout
                android:layout_width="@dimen/padding_zero"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_six">

                <EditText
                    android:id="@+id/edit_address"
                    android:hint="@string/editor_activity_place_delivered"
                    style="@style/EditorFieldStyle" />


            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/editor_activity_image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_gravity="center"
            android:text="@string/editor_activity_submit_order" />

    </LinearLayout>
</ScrollView>